// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Matrix Input Forms 1`] = `
Array [
  0.7,
  0,
  0.17,
  0,
  0.7,
  0.0896,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 2`] = `
Array [
  0.7,
  0,
  0.38,
  0,
  0.7,
  0.0896,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 3`] = `
Array [
  0.7,
  0,
  0.17,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 4`] = `
Array [
  0.7,
  0,
  0.38,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;
